cc/trees/layer_tree_host_impl.cc
@@ -819,6 +819,13 @@ DrawResult LayerTreeHostImpl::CalculateRenderPasses(
       render_surface->AppendRenderPasses(frame);
   }
 
+  // Damage rects for non-root passes aren't meaningful, so set them to be
+  // equal to the output rect.
+  for (size_t i = 0; i + 1 < frame->render_passes.size(); ++i) {
+    RenderPass* pass = frame->render_passes[i].get();
+    pass->damage_rect = pass->output_rect;
+  }
+
   // When we are displaying the HUD, change the root damage rect to cover the
   // entire root surface. This will disable partial-swap/scissor optimizations
   // that would prevent the HUD from updating, since the HUD does not cause
